# claude-erpnext-timesheet

./: .gitignore  LICENSE  README.md  config-template.json  install.sh  pyproject.toml
.claude-plugin/: plugin.json
agents/: history-reader.md  timesheet-submitter.md
docs/superpowers/plans/: 2026-03-24-timesheet-v2.md  2026-03-25-timesheet-v3.md  2026-03-27-timesheet-v4.md  2026-04-20-multi-project.md  2026-04-20-smart-group-mapping.md  2026-04-20-task-tree.md  2026-04-22-setup-redesign.md  2026-04-23-timesheet-draft-redesign.md
docs/superpowers/specs/: 2026-03-24-timesheet-v2-design.md  2026-03-25-timesheet-v3-design.md  2026-03-27-timesheet-v4-design.md  2026-04-20-multi-project-design.md  2026-04-20-smart-group-mapping-design.md  2026-04-20-task-tree-design.md  2026-04-22-setup-redesign.md  2026-04-23-timesheet-draft-redesign.md
hooks/: hooks.json
hooks/hooks-handlers/: run-mcp.sh  session-start.sh
scripts/: crypto.py  erpnext_client.py  parse_logs.py  setup.py  task_manager.py
skills/timesheet/: SKILL.md  mcp_server.py  timesheet.md
skills/timesheet/scripts/: erpnext_client.py  parse_logs.py  select_defaults.py  set_password.py  setup.py  task_manager.py  timesheet_setup.py
tests/: test_crypto.py  test_erpnext_client.py  test_mcp_server.py  test_parse_logs.py  test_setup.py  test_task_manager.py
tests/fixtures/: sample_session.jsonl
