[project]
name = "erpnext-timesheet"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["requests>=2.31", "cryptography>=41.0", "mcp[cli]>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["skills/timesheet"]
